# Proton-test-

./: antisp  automod.json  autoresponse.json  badges.json  config.json  config.py  main.py  pyproject.toml  replit.nix
cogs/: akinator.py  anti.py  ar.py  automod.py  autorole.py  baap.py  fight.py  fun.py  help.py  join.py  moderation.py  music.py  owner.py  pfps.py  roles.py  rr.py  security.py  selfrole.py  shards.py  support.py  text.py  ticket.py  vcrole.py  welcome.py  welcomer.py
cogs/utils/: config.py
core/: bot.py
database/: config.json  database.db  prefix.json  premium.json  schema.sql
exceptions/: __init__.py
helpers/: checks.py  db_manager.py
utils/: checks.py  classes.py  converters.py  embed.py  message.py  reactions.py  recursive_utils.py  ui.py
views/: help.py
