[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
aiohttp = "^3.8.3"
discord = "^2.0.0"
requests = "^2.28.1"
pymongo = "^4.2.0"
wavelink = "^1.3.3"
jishaku = "^2.5.1"
"discord.py" = "^2.0.1"
mcstatus = "^10.0.1"
Babel = "^2.11.0"
nest-asyncio = "^1.5.6"
motor = "^3.1.1"
validators = "^0.20.0"
httpx = "^0.23.0"
handler = "^1.3.0"
simpcalci = "^0.0.2"
camel_race = "^1.0.9"
play = "^0-develop-1-gd67cd85"
python-youtube = "^0.8.3"
emojis = "^0.6.0"
orjson = "^3.8.1"
PyNaCl = "^1.5.0"
enums = "^0.0.2"
mysql-connector-python = "^8.0.31"
youtube-search-python = "^1.6.6"
psutil = "^5.9.4"
disnake = "^2.7.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
